--- a/mybibfile.bib
+++ b/mybibfile.bib
@@ -252,3 +252,12 @@ Mechanic.",
   pages   = "92-64",
   year    = "1992",
   }
+  
+@article{roberts,
+  title   = "The behavior of flux difference splitting schemes near slowly moving shock waves",
+  author  = "Thomas W Roberts",
+  journal = "Journal of Computational Physics",
+  volume  = "90",
+  pages   = "141-160",
+  year    = "1990",
+  }
