--- a/low_mach.tex
+++ b/low_mach.tex
@@ -325,7 +325,7 @@ The derivation of the viscous regularization (dissipative terms) is carried out 
 %
 where $\kappa$ and $\mu$ are positive viscosity coefficients. $\grad^s \vec{u}$ denotes the symmetric gradient operator that guarantees the method to be rotationally invariant \cite{jlg}.
 
-The viscous regularization (\eqt{eq:euler_visc}) requires the numerical computation of viscosity coefficients. Many stabilization approaches have been proposed in the literature such as the Lapidus (pressure-based) method \cite{add ref}. Here, we follow the work of Guermond et al. and define the viscosity coefficients, $\kappa$ and $\mu$, based on the local entropy production. These coefficients are evaluated using the local entropy residual $D_e(\vec{r},t)$ defined in \eqt{eq:ent_residual}; $D_e(\vec{r},t)$ is known to be peaked in shocks and vanishingly small elsewhere \cite{Toro}. 
+The viscous regularization (\eqt{eq:euler_visc}) requires the numerical computation of viscosity coefficients. Many stabilization approaches have been proposed in the literature such as the Lapidus (pressure-based) method \cite{Lapidus_book, Lapidus_paper}. Here, we follow the work of Guermond et al. and define the viscosity coefficients, $\kappa$ and $\mu$, based on the local entropy production. These coefficients are evaluated using the local entropy residual $D_e(\vec{r},t)$ defined in \eqt{eq:ent_residual}; $D_e(\vec{r},t)$ is known to be peaked in shocks and vanishingly small elsewhere \cite{Toro}. 
 %
 \begin{equation}
 \label{eq:ent_residual}
@@ -484,17 +484,18 @@ where the \emph{numerical} Reynolds $(Re_{\infty})$ and Prandtl $(Pr_{\infty})$ 
 Re_{\infty} = \frac{u_{\infty} L_{\infty}}{\mu_{\infty}} \text{ and }
 Pr_{\infty} = \frac{\mu_{\infty}}{\kappa_{\infty}} \text{.}
 \end{eqnarray}
-The Reynolds and Prandtl \emph{numerical numbers} are related to the viscosity coefficients $\mu$ and $\kappa$ through the viscosity reference values. The objective is to derive the asymptotic equations and see how the artificial dissipative terms affect the physics. For simplicity purpose, the upper script $^*$ is dropped in the remaining of this section.\\
-It is, then, chosen to distinguish two cases that were mentioned earlier in this section: the non-isentropic and isentropic Euler equations.
+The Reynolds and Prandtl \emph{numerical numbers} are related to the viscosity coefficients $\mu$ and $\kappa$ through the viscosity reference values. The objective is to derive the asymptotic equations and see how the artificial dissipative terms affect the physics. For simplicity purpose, the upper script $^*$ is dropped in the remaining of this section. It is, then, chosen to distinguish two cases that were mentioned earlier in this section: the non-isentropic and isentropic Euler equations.
 \begin{itemize}
 \item The non-isentropic Euler equations:\\
 Under this assumptions, shocks can form even with low Mach numbers (for instance, a step initial condition will trigger all of the waves independently of the Mach number). The non-dimensional form of the Euler equations given in \eqt{eq:Euler_eq2} provides some insight on the dominant terms in the low Mach limit. This is particular obvious in the momentum equation \eqt{eq:euler_eq2_mom} with the pressure gradient that is weighted by the inverse of the Mach number square. Thus, in the presence of shock (non-isentropic Euler equations), this pressure gradient term in the momentum equation will need to be stabilized by some dissipative terms of the same scaling, to prevent spurious oscillation from forming. This statement gives us a condition to determine the scaling of the non-dimensionalized numbers $Re_{\infty}$ and $Pr_{\infty}$ and leaves us with three options: $Re_{\infty} = M_{\infty}^2$ and $Re_{\infty}Pr_{\infty} = 1$ ($\left\{ n,m \right\}$ = $\left\{ 2, -2 \right\}$) or $Re_{\infty} = 1$ and $Re_{\infty}Pr_{\infty} = M_{\infty}^2$ ($\left\{ n,m \right\}$ = $\left\{ 0, 2 \right\}$) or $Re_{\infty} = M_{\infty}^2$ and $Re_{\infty}Pr_{\infty} = M_{\infty}^2$ ($\left\{ n,m \right\}$ = $\left\{ 2, 0 \right\}$). Arguments related to the validity of the three previous options will be given later in this section.
 \item The isentropic Euler equations and the incompressible limit:\\
-In this particular case, shock cannot form. Consequently, the physical solution is smooth, the equation of state is of the form $\rho = f(P)$ and the speed of sound can be expressed as follows: 
-\begin{equation}\label{eq:sound_speed_iso}
-c^2 = \left. \frac{\partial P}{ \partial \rho}\right)_s = \frac{dP}{d\rho} = \frac{d (f^{-1})}{d \rho} 
-\end{equation}
-where $f^{-1}$ is the inverse of the function $f(P)$. Using the equation of state $\rho = f(P)$ and \eqt{eq:sound_speed_iso}, the entropy residual given in \eqt{eq:ent_res} is shown to be zero (\app{app:ise_equ}). Thus, the viscosity coefficients $\mu$ and $\kappa$ are also zero, independently of the choice of the normalization $n_P$, since defined proportional to the entropy residual (\eqt{eq:visc_definition}). This result is crucial for the low Mach asymptotic limit since it implies that the dissipative terms in the right hand-side of \eqt{eq:Euler_eq2} vanish in the case of an isentropic flow. Thus, the dissipative terms are not ill-scaled and the compressible Euler equations should degenerate to the incompressible system of equations in the low Mach asymptotic limit.
+In this particular case, shock cannot form and the compressible Euler equations are known to converge to the incompressible fluid equations when the Mach number tends to zero. When adding dissipative terms, as required in the entropy viscosity method, the low Mach asymptotic limit has to be conserved: the pressure fluctuations are of the order of the Mach number square, and the velocity vector obeys to the divergent constraint $\div \vec{u}_0 = 0$. Such conditions are used to devise a scaling of the non-dimensionalized numbers, $Re_{\infty}$ and $Pr_{\infty}$, for the case under consideration. Once again, by studying the momentum equation, it is observed that the leading, $P_0$, and first-order, $P_1$, terms of the pressure are spatially constant if only if $Re_{\infty} = Pr_{\infty} = 1$:  
+%Consequently, the physical solution is smooth, the equation of state is of the form $\rho = f(P)$ and the speed of sound can be expressed as follows: 
+%\begin{equation}\label{eq:sound_speed_iso}
+%c^2 = \left. \frac{\partial P}{ \partial \rho}\right)_s = \frac{dP}{d\rho} = \frac{d (f^{-1})}{d \rho} 
+%\end{equation}
+%where $f^{-1}$ is the inverse of the function $f(P)$. Using the equation of state $\rho = f(P)$ and \eqt{eq:sound_speed_iso}, the entropy residual given in \eqt{eq:ent_res} is shown to be zero (\app{app:ise_equ}). Thus, the viscosity coefficients $\mu$ and $\kappa$ are also zero, independently of the choice of the normalization $n_P$, since defined proportional to the entropy residual (\eqt{eq:visc_definition}). 
+%This result is crucial for the low Mach asymptotic limit since it implies that the dissipative terms in the right hand-side of \eqt{eq:Euler_eq2} vanish in the case of an isentropic flow. Thus, the dissipative terms are not ill-scaled and the compressible Euler equations should degenerate to the incompressible system of equations in the low Mach asymptotic limit.
 \end{itemize}
 Even if it is now known that the dissipative terms will not affect the low Mach asymptotic limit of the Euler equations, the asymptotic equations are still derived with the objective of determining which of the three options enumerated in the non-isentropic Euler equations will fit better our purpose. In other term, we want to determine if there is any valid arguments that will favor one of the above three options: for example in the momentum equation (\eqt{eq:euler_eq2_mom}), is it better to dissipate on the velocity in the low Mach limit by setting $Re_{\infty} = M_{\infty}^2$ and $Pr_{\infty} Re_{\infty} = 1$, or to set $Re_{\infty} = 1$ and $Pr_{\infty} Re_{\infty} = M_{\infty}^2$ and dissipate on the density instead? To do so, each variable is expanded in term of the Mach number (example given in \eqt{eq:expansion} for the pressure $P$) in order to derive the leading, first- and second-order equations. 
 \begin{equation}
